Atualização Users
Routes for users and model
